# vdi-babysitter

./: .gitignore  AGENTS.md  CLAUDE.md  NOTES.md  README.md  ROADMAP.md  fetch_ica.py  pyproject.toml  test_e2e.py
.github/workflows/: ci.yml  release.yml
_bmad-output/brainstorming/: NOTES.md  brainstorming-session-2026-04-08-1530.md  brainstorming-session-2026-04-09-0900.md  brainstorming-session-2026-04-25-1200.md  brainstorming-session-2026-04-26-1400.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/core/: config.yaml
tests/: test_citrix_commands.py  test_citrix_provider.py  test_config.py  test_configure_commands.py  test_main.py
vdi_babysitter/: config.py  configure_commands.py  main.py
vdi_babysitter/providers/citrix/: commands.py  provider.py
